--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body {
     padding: 0 2rem;
 }
 
-/* Бобины с отверстиями МЕЖДУ спицами */
+/* Бобины с правильным расположением отверстий МЕЖДУ спицами */
 .film-reel {
     width: 180px;
     height: 180px;
@@ -98,7 +98,7 @@ body {
     box-shadow: inset 0 0 10px rgba(0,0,0,0.8);
 }
 
-/* Спицы */
+/* Спицы - упрощенная логика */
 .reel-spoke {
     position: absolute;
     width: 3px;
@@ -119,7 +119,7 @@ body {
 .reel-spoke:nth-child(6) { transform: rotate(240deg); }
 .reel-spoke:nth-child(7) { transform: rotate(300deg); }
 
-/* Отверстия - теперь между спицами */
+/* Отверстия - абсолютно новый подход */
 .reel-hole {
     position: absolute;
     width: 16px;
@@ -127,20 +127,41 @@ body {
     background: var(--primary-gold);
     border-radius: 50%;
     box-shadow: 0 0 12px var(--secondary-gold);
-    top: 50%;
-    left: 50%;
-    margin-left: -8px;
-    margin-top: -8px;
     z-index: 3;
 }
 
-/* Отверстия теперь на 30°, 90°, 150°, 210°, 270°, 330° - между спицами */
-.reel-hole:nth-child(8) { transform: rotate(30deg) translate(60px) rotate(-30deg); }
-.reel-hole:nth-child(9) { transform: rotate(90deg) translate(60px) rotate(-90deg); }
-.reel-hole:nth-child(10) { transform: rotate(150deg) translate(60px) rotate(-150deg); }
-.reel-hole:nth-child(11) { transform: rotate(210deg) translate(60px) rotate(-210deg); }
-.reel-hole:nth-child(12) { transform: rotate(270deg) translate(60px) rotate(-270deg); }
-.reel-hole:nth-child(13) { transform: rotate(330deg) translate(60px) rotate(-330deg); }
+/* Отверстия МЕЖДУ спицами - используем абсолютное позиционирование */
+.reel-hole:nth-child(8) {
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.reel-hole:nth-child(9) {
+    top: 35px;
+    right: 30px;
+}
+
+.reel-hole:nth-child(10) {
+    bottom: 35px;
+    right: 30px;
+}
+
+.reel-hole:nth-child(11) {
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.reel-hole:nth-child(12) {
+    bottom: 35px;
+    left: 30px;
+}
+
+.reel-hole:nth-child(13) {
+    top: 35px;
+    left: 30px;
+}
 
 @keyframes reelRotate {
     from { transform: rotate(0deg); }
@@ -455,16 +476,35 @@ h2 {
     .reel-hole {
         width: 14px;
         height: 14px;
-        margin-left: -7px;
-        margin-top: -7px;
     }
     
-    .reel-hole:nth-child(8) { transform: rotate(30deg) translate(50px) rotate(-30deg); }
-    .reel-hole:nth-child(9) { transform: rotate(90deg) translate(50px) rotate(-90deg); }
-    .reel-hole:nth-child(10) { transform: rotate(150deg) translate(50px) rotate(-150deg); }
-    .reel-hole:nth-child(11) { transform: rotate(210deg) translate(50px) rotate(-210deg); }
-    .reel-hole:nth-child(12) { transform: rotate(270deg) translate(50px) rotate(-270deg); }
-    .reel-hole:nth-child(13) { transform: rotate(330deg) translate(50px) rotate(-330deg); }
+    .reel-hole:nth-child(8) {
+        top: 15px;
+    }
+    
+    .reel-hole:nth-child(9) {
+        top: 30px;
+        right: 25px;
+    }
+    
+    .reel-hole:nth-child(10) {
+        bottom: 30px;
+        right: 25px;
+    }
+    
+    .reel-hole:nth-child(11) {
+        bottom: 15px;
+    }
+    
+    .reel-hole:nth-child(12) {
+        bottom: 30px;
+        left: 25px;
+    }
+    
+    .reel-hole:nth-child(13) {
+        top: 30px;
+        left: 25px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -496,16 +536,35 @@ h2 {
     .reel-hole {
         width: 12px;
         height: 12px;
-        margin-left: -6px;
-        margin-top: -6px;
     }
     
-    .reel-hole:nth-child(8) { transform: rotate(30deg) translate(38px) rotate(-30deg); }
-    .reel-hole:nth-child(9) { transform: rotate(90deg) translate(38px) rotate(-90deg); }
-    .reel-hole:nth-child(10) { transform: rotate(150deg) translate(38px) rotate(-150deg); }
-    .reel-hole:nth-child(11) { transform: rotate(210deg) translate(38px) rotate(-210deg); }
-    .reel-hole:nth-child(12) { transform: rotate(270deg) translate(38px) rotate(-270deg); }
-    .reel-hole:nth-child(13) { transform: rotate(330deg) translate(38px) rotate(-330deg); }
+    .reel-hole:nth-child(8) {
+        top: 10px;
+    }
+    
+    .reel-hole:nth-child(9) {
+        top: 25px;
+        right: 20px;
+    }
+    
+    .reel-hole:nth-child(10) {
+        bottom: 25px;
+        right: 20px;
+    }
+    
+    .reel-hole:nth-child(11) {
+        bottom: 10px;
+    }
+    
+    .reel-hole:nth-child(12) {
+        bottom: 25px;
+        left: 20px;
+    }
+    
+    .reel-hole:nth-child(13) {
+        top: 25px;
+        left: 20px;
+    }
     
     .film-navigation {
         margin: 0;
